@@ -59,5 +59,11 @@
       <option>SHA_CRYPT_MAX_ROUNDS</option>, the highest value will be
       used.
     </para>
+    <para condition="pam">
+      Note: This only affect the generation of group passwords.
+      The generation of user passwords is done by PAM and subject to the
+      PAM configuration. It is recommended to set this variable
+      consistently with the PAM configuration.
+    </para>
   </listitem>
 </varlistentry>
